ProjetCompil/Verif/Test/fail/typeNonCompatible18.cas
program
	A : array [1..14] of integer;
	B : array [1..14] of integer;
	C : real;
begin
	C := C + B;
end.
	
